# FastApiTesting

./: README.md
fastApiProject/: .gitignore  README.md  main.py  pyproject.toml
fastApiProject/BirbBerry/data_types/: models.py  schema.py
fastApiProject/BirbBerry/routers/: posts_router.py  users_router.py
fastApiProject/BirbBerry/utils/: config.py  db.py  jwt.py  permission_checker.py
fastApiProject/alembic/: env.py
fastApiProject/alembic/versions/: 0e0e01d641ff_.py  d9f0abdc2541_.py  f8dc9d9b77db_.py
frontend/: README.md  package-lock.json  package.json
frontend/public/pictures/: Eclectus Parrot.jfif  babyrescue.jfif  lovebird.jfif
frontend/src/: App.tsx  RequestHandler.ts  index.tsx  types.ts  util.ts
frontend/src/components/: NavigationBar.css  NavigationBar.tsx
frontend/src/components/homepage/: AddPost.tsx  Edit.tsx  HomePage.css  HomePage.tsx
frontend/src/components/loginpage/: LoginPage.tsx
frontend/src/components/profilepage/: ProfilePage.css  ProfilePage.tsx
frontend/src/components/registerpage/: RegisterPage.tsx
